Fix game-icon z-index

--- a/project/src/styl/games-menu.styl
+++ b/project/src/styl/games-menu.styl
@@ -33,6 +33,7 @@
     margin 0 auto
     border-radius 50%;
     box-shadow: inset 0px 0px 3px 0px #96762F;
+    z-index 3
   .description
     padding 20px 0
   h2
